feat: aliases для импортов добавлены в vite.config
feat: добавлены HOC для защиты route`ов

feat: свойство isAuth в auth.store переформировано в геттер

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -30,15 +30,19 @@
     "jsx": "preserve",
     "baseUrl": "src",
     "paths": {
+      "@public/*": ["../public/*"],
       "@pages/*": ["./pages/*"],
+      "@modules/*": ["./modules/*"],
+      "@common/*": ["./common/*"],
+      "@hoc/*": ["./common/hoc/*"],
+      "@lib/*": ["./lib/*"],
+      "@router/*": ["./router/*"],
+      "@stores/*": ["./stores/*"],
+      "@layouts/*": ["./layouts/*"],
       "@components/*": ["./components/*"],
       "@ui/*": ["./components/ui/*"],
-      "@lib/*": ["./lib/*"],
-      "@models/*": ["./models/*"],
-      "@router/*": ["./router/*"],
-      "@modules/*": ["./modules/*"],
       "@hooks/*": ["./hooks/*"],
-      "@stores/*": ["./stores/*"],
+      "@models/*": ["./models/*"],
       "@utils/*": ["./utils/*"]
     },
     "incremental": true
