--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "dependencies": {
     "@apollo/client": "3.7.8",
-    "dotenv": "16.0.3",
+    "classnames": "^2.3.2",
     "graphql": "16.6.0",
     "js-cookie": "3.0.1",
     "react": "18.2.0",
@@ -19,6 +19,7 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^29.4.0",
     "@types/js-cookie": "3.0.3",
     "@types/node": "18.14.0",
     "@types/react": "18.0.27",
@@ -34,9 +35,11 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.4.3",
     "postcss": "8.4.21",
     "prettier": "2.8.4",
     "tailwindcss": "3.2.7",
+    "ts-jest": "^29.0.5",
     "typescript": "4.9.3",
     "vite": "4.1.0",
     "vite-plugin-babel": "^1.1.3",
@@ -45,6 +48,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   }
 }
