fix: исправления обработки переменных окружения
feat: Mode enum, types folder

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -34,6 +34,7 @@
       "@pages/*": ["./pages/*"],
       "@modules/*": ["./modules/*"],
       "@common/*": ["./common/*"],
+      "@types/*": ["./common/type/*"],
       "@hoc/*": ["./common/hoc/*"],
       "@theme/*": ["./common/theme/*"],
       "@utils/*": ["./common/utils/*"],
